argocd/applications/huly/account/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      volumes:
        - configMap:
            name: huly-healthcheck-scripts
          name: healthcheck-scripts
      containers:
        - env:
            - name: ACCOUNTS_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: ACCOUNTS_URL
            - name: ACCOUNT_PORT
              value: '3000'
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: FRONT_URL
            - name: STATS_URL
              value: http://stats
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: MODEL_ENABLED
              value: '*'
            - name: COCKROACH_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: COCKROACH_PASSWORD
            - name: COCKROACH_DB_URL
              value: "postgres://selfhost:$(COCKROACH_PASSWORD)@cockroach-public:26257/defaultdb"
            - name: DB_URL
              value: "$(COCKROACH_DB_URL)?sslmode=require"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: TRANSACTOR_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: TRANSACTOR_URL
            - name: QUEUE_CONFIG
              value: kafka-kafka-brokers.kafka.svc.cluster.local:9093
          image: hardcoreeng/account:v0.7.375
          name: account
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512M"
          startupProbe:
            exec:
              command:
                - node
                - /opt/huly-healthchecks/account-ready.js
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - node
                - /opt/huly-healthchecks/account-ready.js
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /opt/huly-healthchecks
              name: healthcheck-scripts
              readOnly: true
      restartPolicy: Always
