argocd/applications/huly/account/account-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: account
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`account.huly.proompteng.ai`)
      kind: Rule
      services:
        - name: account
          port: 80
